--- a/index.html
+++ b/index.html
@@ -169,7 +169,11 @@
         </select>
       </div>
       <!-- SUBMIT -->
-      <button type="submit">تسجيل</button>
+      <div class="submit">
+        <label for="">حضور الدورة</label>
+
+        <button type="submit">تسجيل</button>
+      </div>
     </form>
   </main>
   <img class="background" src="./assets/background.png" alt="">
