--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="title first">
       <h3>ماذا ستتعلم في المعسكر</h3>
     </div>
+    <!-- learn sections -->
     <div class="sections">
       <section>
         <h4><bdi>دورة +CompTIA Network</bdi></h4>
@@ -47,45 +48,16 @@
             والاتصال والبرامج</li>
         </ul>
         <img class="double-arrow" src="/assets/double-arrow.png" alt="">
-      </section>
-      <section>
-        <h4><bdi>دورة +CompTIA Network</bdi></h4>
-        <ul>
-          <li>شرح مفاهيم الشبكات الأساسية، بما في ذلك نموذج OSI وأجهزة الشبكة والتطبيقات والمفاهيم السحابية وخيارات
-            الاتصال والمزيد.
-          </li>
-          <li>فهم تقنيات التوجيه والعوامل المهمة للتركيبات المادية، تكوين تقنيات التبديل والأجهزة اللاسلكية.
-          </li>
-          <li>مراقبة وتحسين الشبكات لضمان استمرارية العمل
-          </li>
-          <li>فهم مفاهيم الأمان وهجمات الشبكة لتقوية الشبكات ضد التهديدات.
-          </li>
-          <li>شرح منهجية استكشاف الأخطاء وإصلاحها ومعالجة المشكلات الشائعة المتعلقة بالشبكات، بما في ذلك مشكلات الكابلات
-            والاتصال والبرامج</li>
-        </ul>
-        <img class="double-arrow" src="/assets/double-arrow.png" alt="">
-      </section>
-      <section>
-        <h4><bdi>دورة +CompTIA Network</bdi></h4>
-        <ul>
-          <li>شرح مفاهيم الشبكات الأساسية، بما في ذلك نموذج OSI وأجهزة الشبكة والتطبيقات والمفاهيم السحابية وخيارات
-            الاتصال والمزيد.
-          </li>
-          <li>فهم تقنيات التوجيه والعوامل المهمة للتركيبات المادية، تكوين تقنيات التبديل والأجهزة اللاسلكية.
-          </li>
-          <li>مراقبة وتحسين الشبكات لضمان استمرارية العمل
-          </li>
-          <li>فهم مفاهيم الأمان وهجمات الشبكة لتقوية الشبكات ضد التهديدات.
-          </li>
-          <li>شرح منهجية استكشاف الأخطاء وإصلاحها ومعالجة المشكلات الشائعة المتعلقة بالشبكات، بما في ذلك مشكلات الكابلات
-            والاتصال والبرامج</li>
-        </ul>
-        <img class="double-arrow" src="/assets/double-arrow.png" alt="">
+        <div class="section-img">
+          <img  src="/assets/comptia.png" alt="">
+        </div>
       </section>
     </div>
+    <!--  -->
     <div class="title last">
       <h3>ماذا ستتعلم في المعسكر</h3>
     </div>
+    <!-- details -->
     <section class="register-details my-20">
       <div>
         <div>
@@ -132,9 +104,11 @@
         </ul>
       </div>
     </section>
+    <!--  -->
     <div class="title">
       <h3>تحميل محاور المعسكر</h3>
     </div>
+    <!-- registeration -->
     <form action="" class="my-20">
       <!-- name -->
       <div>
