--- a/index.html
+++ b/index.html
@@ -1,156 +1,260 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>معسكر المسار التأسيسي للأمن السيبراني</title>
+    <link rel="stylesheet" type="text/css" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>معسكر المسار التأسيسي للأمن السيبراني</title>
-  <link rel="stylesheet" type="text/css" href="./styles/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100..900&display=swap" rel="stylesheet">
-</head>
-
-<body dir="rtl" class="cybersecurity-bootcamp">
-  <header class="container">
-    <div class="right">
-      <img class="logo-img" src="./assets/logo.png" alt="">
-      <div class="title ">
-        <h1>
-          معسكر المسار التأسيسي للأمن السيبراني
-        </h1>
-        <h2><bdi>CyberSecurity Bootcamp Level 1</bdi></h2>
+  <body dir="rtl" class="cybersecurity-bootcamp">
+    <header class="container">
+      <div class="right">
+        <img class="logo-img" src="./assets/logo.png" alt="" />
+        <div class="title">
+          <h1>معسكر المسار التأسيسي للأمن السيبراني</h1>
+          <h2><bdi>CyberSecurity Bootcamp Level 1</bdi></h2>
+        </div>
       </div>
-    </div>
-    <div class="left">
-      <img class="lock-img" src="./assets/lock-image.png" alt="">
-    </div>
-  </header>
-  <main class="container">
-    <div class="title first">
-      <h3>ماذا ستتعلم في المعسكر</h3>
-    </div>
-    <!-- learn sections -->
-    <div class="sections">
-      <section>
-        <h4><bdi>دورة +CompTIA Network</bdi></h4>
-        <ul>
-          <li>شرح مفاهيم الشبكات الأساسية، بما في ذلك نموذج OSI وأجهزة الشبكة والتطبيقات والمفاهيم السحابية وخيارات
-            الاتصال والمزيد.
-          </li>
-          <li>فهم تقنيات التوجيه والعوامل المهمة للتركيبات المادية، تكوين تقنيات التبديل والأجهزة اللاسلكية.
-          </li>
-          <li>مراقبة وتحسين الشبكات لضمان استمرارية العمل
-          </li>
-          <li>فهم مفاهيم الأمان وهجمات الشبكة لتقوية الشبكات ضد التهديدات.
-          </li>
-          <li>شرح منهجية استكشاف الأخطاء وإصلاحها ومعالجة المشكلات الشائعة المتعلقة بالشبكات، بما في ذلك مشكلات الكابلات
-            والاتصال والبرامج</li>
-        </ul>
-        <img class="double-arrow" src="/assets/double-arrow.png" alt="">
-        <div class="section-img">
-          <img  src="/assets/comptia.png" alt="">
+      <div class="left">
+        <img class="lock-img" src="./assets/lock-image.png" alt="" />
+      </div>
+    </header>
+    <main class="container">
+      <div class="title first">
+        <h3>ماذا ستتعلم في المعسكر</h3>
+      </div>
+      <!-- learn sections -->
+      <div class="sections">
+        <section>
+          <h4><bdi>دورة +CompTIA Network</bdi></h4>
+          <ul>
+            <li>
+              شرح مفاهيم الشبكات الأساسية، بما في ذلك نموذج OSI وأجهزة الشبكة
+              والتطبيقات والمفاهيم السحابية وخيارات الاتصال والمزيد.
+            </li>
+            <li>
+              فهم تقنيات التوجيه والعوامل المهمة للتركيبات المادية، تكوين تقنيات
+              التبديل والأجهزة اللاسلكية.
+            </li>
+            <li>مراقبة وتحسين الشبكات لضمان استمرارية العمل</li>
+            <li>
+              فهم مفاهيم الأمان وهجمات الشبكة لتقوية الشبكات ضد التهديدات.
+            </li>
+            <li>
+              شرح منهجية استكشاف الأخطاء وإصلاحها ومعالجة المشكلات الشائعة
+              المتعلقة بالشبكات، بما في ذلك مشكلات الكابلات والاتصال والبرامج
+            </li>
+          </ul>
+          <img class="double-arrow" src="./assets/double-arrow.png" alt="" />
+          <div class="section-img">
+            <img src="./assets/comptia.png" alt="" />
+          </div>
+        </section>
+      </div>
+      <!--  -->
+      <div class="title last">
+        <h3>ماذا ستتعلم في المعسكر</h3>
+      </div>
+      <!-- details -->
+      <section class="register-details my-20">
+        <div>
+          <div>
+            <img src="assets/date.png" alt="" />
+            <div>
+              <p>بـدايــــــة مــــن</p>
+              <p><bdi>06/10/2024</bdi></p>
+            </div>
+          </div>
+          <div>
+            <img src="assets/date.png" alt="" />
+            <div>
+              <p>مـــدة المعكـــسر</p>
+              <p><bdi>12 أســـــــــــــبوع</bdi></p>
+            </div>
+          </div>
+          <div>
+            <img src="assets/date.png" alt="" />
+            <div>
+              <p>تقــــديم الـــــدورة</p>
+              <p><bdi>حضوري - عن بعد</bdi></p>
+            </div>
+          </div>
+          <div>
+            <img src="assets/date.png" alt="" />
+            <div>
+              <p><bdi>الساعة 07:00pm</bdi></p>
+              <p><bdi>إلـــــى 10:00pm </bdi></p>
+            </div>
+          </div>
+          <div>
+            <img src="assets/date.png" alt="" />
+            <div>
+              <p>حجز المقعد</p>
+              <p><bdi>100 ريــــال</bdi></p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <h4>سعر المعسكر</h4>
+          <ul>
+            <li><bdi>7935 ريال</bdi></li>
+            <li><bdi>4700 ريال</bdi></li>
+          </ul>
         </div>
       </section>
-    </div>
-    <!--  -->
-    <div class="title last">
-      <h3>ماذا ستتعلم في المعسكر</h3>
-    </div>
-    <!-- details -->
-    <section class="register-details my-20">
-      <div>
+      <!--  -->
+      <div class="title">
+        <h3>تحميل محاور المعسكر</h3>
+      </div>
+      <!-- registeration -->
+      <form action="" class="my-20">
+        <!-- name -->
         <div>
-          <img src="assets/date.png" alt="">
-          <div>
-            <p>بـدايــــــة مــــن</p>
-            <p><bdi>06/10/2024</bdi></p>
-          </div>
+          <label for="name">الاسم الرباعي الكامل</label>
+          <input required id="name" type="text" />
         </div>
+        <!-- email -->
         <div>
-          <img src="assets/date.png" alt="">
-          <div>
-            <p>مـــدة المعكـــسر </p>
-            <p><bdi>12 أســـــــــــــبوع</bdi></p>
-          </div>
+          <label for="email">البريد الالكتروني</label>
+          <input required id="email" type="email" />
         </div>
+        <!-- education -->
         <div>
-          <img src="assets/date.png" alt="">
-          <div>
-            <p>تقــــديم الـــــدورة</p>
-            <p><bdi>حضوري - عن بعد</bdi></p>
-          </div>
+          <label for="education">المؤهل العلمي</label>
+          <select required name="" id="education">
+            <option value="جامعي">جامعي</option>
+            <option value="ثانوي">ثانوي</option>
+            <option value="دبلوم">دبلوم</option>
+          </select>
         </div>
+        <!-- phone -->
         <div>
-          <img src="assets/date.png" alt="">
-          <div>
-            <p><bdi>الساعة 07:00pm</bdi></p>
-            <p><bdi>إلـــــى 10:00pm </bdi></p>
-          </div>
+          <label for="phone">رقم الجوال</label>
+          <input required id="phone" type="text" />
         </div>
+        <!-- attendance -->
         <div>
-          <img src="assets/date.png" alt="">
-          <div>
-            <p>حجز المقعد</p>
-            <p><bdi>100 ريــــال</bdi></p>
-          </div>
+          <label for="attendance">حضور الدورة</label>
+          <select required name="" id="attendance">
+            <option value="اونلاين">اونلاين (عن بعد)</option>
+            <option value="حضوري">حضوري</option>
+          </select>
         </div>
-      </div>
-      <div>
-        <h4>سعر المعسكر</h4>
-        <ul>
-          <li><bdi>7935 ريال</bdi></li>
-          <li><bdi>4700 ريال</bdi></li>
-        </ul>
-      </div>
-    </section>
-    <!--  -->
-    <div class="title">
-      <h3>تحميل محاور المعسكر</h3>
-    </div>
-    <!-- registeration -->
-    <form action="" class="my-20">
-      <!-- name -->
-      <div>
-        <label for="name">الاسم الرباعي الكامل</label>
-        <input id="name" type="text">
-      </div>
-      <!-- email -->
-      <div>
-        <label for="email">البريد الالكتروني</label>
-        <input id="email" type="email">
-      </div>
-      <!-- education -->
-      <div>
-        <label for="education">المؤهل العلمي</label>
-        <select name="" id="education">
-          <option value="">جامعي</option>
-          <option value="">ثانوي</option>
-          <option value="">دبلوم</option>
-        </select>
-      </div>
-      <!-- phone -->
-      <div>
-        <label for="phone">رقم الجوال</label>
-        <input id="phone" type="text">
-      </div>
-      <!-- attendance -->
-      <div>
-        <label for="attendance">حضور الدورة</label>
-        <select name="" id="attendance">
-          <option value="">اونلاين (عن بعد)</option>
-          <option value="">حضوري</option>
-        </select>
-      </div>
-      <!-- SUBMIT -->
-      <div class="submit">
-        <label for="">حضور الدورة</label>
+        <!-- SUBMIT -->
+        <div class="submit">
+          <label for="">حضور الدورة</label>
 
-        <button type="submit">تسجيل</button>
-      </div>
-    </form>
-  </main>
-  <img class="background" src="./assets/background.png" alt="">
-</body>
+          <button type="submit">تسجيل</button>
+        </div>
+      </form>
+    </main>
+    <img class="background" src="./assets/background.png" alt="" />
+    <script>
+      const noCacheHeaders = {
+        "Content-Type": "application/json",
+        "Cache-Control":
+          "no-store, no-cache, must-revalidate, proxy-revalidate",
+        Pragma: "no-cache",
+        Expires: "0",
+        "Surrogate-Control": "no-store",
+      };
 
+      /**
+       * Sends a GET request to the specified URL and returns the response data.
+       *
+       * @param {string} url - The URL to send the request to.
+       * @param {boolean} isJson - Whether the response data should be parsed as JSON.
+       * @param {object} [options={}] - Additional options for the request.
+       * @param {*} [fallBack] - A fallback value to return if the request fails.
+       *
+       * @returns {Promise<string|object>} The response data, either as a string or a JSON object.
+       */
+      async function fetchWithCheck(url, isJson, options = {}, fallBack) {
+        try {
+          const response = await fetch(url, {
+            cache: "no-cache",
+            ...options,
+            headers: {
+              ...noCacheHeaders,
+              ...options?.headers,
+            },
+          });
+
+          console.log("response.ok");
+          console.log(response.ok);
+
+          let data = await response.text();
+
+          if (!response.ok) {
+            let finalData;
+            try {
+              console.log("throw JSON.parse(data)");
+              console.log(data);
+              finalData = JSON.parse(data);
+            } catch {
+              console.log("throw final Data");
+              finalData = data;
+            } finally {
+              console.log("finalData");
+              console.log(finalData);
+              throw finalData;
+            }
+          }
+
+          console.log("fetching ok");
+
+          try {
+            return JSON.parse(data);
+          } catch {
+            return data;
+          }
+        } catch (error) {
+          console.error("fetch with check catch");
+          console.error(error);
+          if (fallBack) return fallBack;
+          throw error;
+        }
+      }
+
+      const form = document.querySelector("form");
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        const name = document.querySelector("#name").value;
+        const email = document.querySelector("#email").value;
+        const education = document.querySelector("#education").value;
+        const phone = document.querySelector("#phone").value;
+        const attendance = document.querySelector("#attendance").value;
+        try {
+          const result = await fetchWithCheck(
+            "http://myserverhost-001-site2.dtempurl.com/api/Camps",
+            null,
+            {
+              method: "POST",
+              body: {
+                id: 0, // TODO: fix this
+                name: name,
+                email: email,
+                education: education,
+                phoneNumber: phone,
+                typeCourse: attendance,
+                createdCode: new Date().toISOString(), // TODO: fix this
+              },
+            }
+          );
+          console.log(result);
+        } catch (err) {
+          console.log(err);
+        }
+      });
+    </script>
+  </body>
 </html>
