--- a/index.html
+++ b/index.html
@@ -147,28 +147,28 @@
             </div>
           </div>
           <div>
-            <img src="assets/date.png" alt="" />
+            <img src="assets/clock@2x.png" alt="" />
             <div>
               <p>مـــدة المعكـــسر</p>
               <p><bdi>12 أســـــــــــــبوع</bdi></p>
             </div>
           </div>
           <div>
-            <img src="assets/date.png" alt="" />
+            <img src="assets/attendance@2x.png" alt="" />
             <div>
               <p>تقــــديم الـــــدورة</p>
               <p><bdi>حضوري - عن بعد</bdi></p>
             </div>
           </div>
           <div>
-            <img src="assets/date.png" alt="" />
+            <img src="assets/clock@2x.png" alt="" />
             <div>
               <p><bdi>الساعة 07:00pm</bdi></p>
               <p><bdi>إلـــــى 10:00pm </bdi></p>
             </div>
           </div>
           <div>
-            <img src="assets/date.png" alt="" />
+            <img src="assets/reserve@2x.png" alt="" />
             <div>
               <p>حجز المقعد</p>
               <p><bdi>100 ريــــال</bdi></p>
