--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <img class="lock-img" src="./assets/lock-image.png" alt="" />
       </div>
     </header>
+    <!-- <figure class="test">
+      <div class="chart-circle">
+        <div class="chart-indicator">&#x1f6f5;</div>
+      </div>     
+      </figure> -->
     <main class="container">
       <div class="title first">
         <h3>ماذا ستتعلم في المعسكر</h3>
@@ -171,7 +176,9 @@
             <img src="assets/reserve@2x.png" alt="" />
             <div>
               <p>حجز المقعد</p>
-              <p><bdi>100 ريــــال</bdi></p>
+              <p>
+                <bdi style="font-size:14px;"><span style="font-size: 27px;font-weight: bolder;line-height: 1;">100</span> ريــــال</bdi>
+              </p>
             </div>
             <p>(يتم استكمال باقي مبلغ المعسكر بعد حضور أول محاضرة)</p>
           </div>
