--- a/index.html
+++ b/index.html
@@ -26,11 +26,6 @@
         <img class="lock-img" src="./assets/lock-image.png" alt="" />
       </div>
     </header>
-    <!-- <figure class="test">
-      <div class="chart-circle">
-        <div class="chart-indicator">&#x1f6f5;</div>
-      </div>     
-      </figure> -->
     <main class="container">
       <div class="title first">
         <h3>ماذا ستتعلم في المعسكر</h3>
@@ -61,6 +56,8 @@
           <div class="section-img">
             <img src="./assets/comptia.png" alt="" />
           </div>
+          <!--  -->
+          <img class="section-img-number" src="/assets/numbers/one@2x.png" alt="" />
         </section>
         <section>
           <h4><bdi>دورة +CompTIA Security</bdi></h4>
@@ -88,6 +85,7 @@
           <div class="section-img">
             <img src="./assets/security@2x.png" alt="" />
           </div>
+          <img class="section-img-number" src="/assets/numbers/two@2x.png" alt="" />
         </section>
         <section>
           <h4><bdi>دورة +CompTIA Linux</bdi></h4>
@@ -103,6 +101,7 @@
           <div class="section-img">
             <img src="./assets/linux@2x.png" alt="" />
           </div>
+          <img class="section-img-number" src="/assets/numbers/three@2x.png" alt="" />
         </section>
         <section>
           <h4><bdi>دورة eJPT - Junior Penetration Tester</bdi></h4>
@@ -121,6 +120,7 @@
           <div class="section-img">
             <img src="./assets/ejpt@2x.png" alt="" />
           </div>
+          <img class="section-img-number" src="/assets/numbers/four@2x.png" alt="" />
         </section>
         <section>
           <h4><bdi>Blue Team Level دورة 1</bdi></h4>
@@ -135,6 +135,7 @@
           <div class="section-img">
             <img src="./assets/blue-team@2x.png" alt="" />
           </div>
+          <img class="section-img-number" src="/assets/numbers/five@2x.png" alt="" />
         </section>
       </div>
       <!--  -->
