--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
             <img src="./assets/comptia.png" alt="" />
           </div>
           <!--  -->
-          <img class="section-img-number" src="/assets/numbers/one@2x.png" alt="" />
+          <img
+            class="section-img-number"
+            src="/assets/numbers/one@2x.png"
+            alt=""
+          />
         </section>
         <section>
           <h4><bdi>دورة +CompTIA Security</bdi></h4>
@@ -85,7 +89,11 @@
           <div class="section-img">
             <img src="./assets/security@2x.png" alt="" />
           </div>
-          <img class="section-img-number" src="/assets/numbers/two@2x.png" alt="" />
+          <img
+            class="section-img-number"
+            src="/assets/numbers/two@2x.png"
+            alt=""
+          />
         </section>
         <section>
           <h4><bdi>دورة +CompTIA Linux</bdi></h4>
@@ -101,7 +109,11 @@
           <div class="section-img">
             <img src="./assets/linux@2x.png" alt="" />
           </div>
-          <img class="section-img-number" src="/assets/numbers/three@2x.png" alt="" />
+          <img
+            class="section-img-number"
+            src="/assets/numbers/three@2x.png"
+            alt=""
+          />
         </section>
         <section>
           <h4><bdi>دورة eJPT - Junior Penetration Tester</bdi></h4>
@@ -120,7 +132,11 @@
           <div class="section-img">
             <img src="./assets/ejpt@2x.png" alt="" />
           </div>
-          <img class="section-img-number" src="/assets/numbers/four@2x.png" alt="" />
+          <img
+            class="section-img-number"
+            src="/assets/numbers/four@2x.png"
+            alt=""
+          />
         </section>
         <section>
           <h4><bdi>Blue Team Level دورة 1</bdi></h4>
@@ -135,7 +151,11 @@
           <div class="section-img">
             <img src="./assets/blue-team@2x.png" alt="" />
           </div>
-          <img class="section-img-number" src="/assets/numbers/five@2x.png" alt="" />
+          <img
+            class="section-img-number"
+            src="/assets/numbers/five@2x.png"
+            alt=""
+          />
         </section>
       </div>
       <!--  -->
@@ -257,7 +277,7 @@
     <div class="popup-form-result">
       <img id="closePopup" src="./assets/close-popup@2x.png" alt="" />
       <img class="success-logo" src="./assets/success-logo@2x.png" alt="" />
-      <p>تم التسجيل بنجاح</p>
+      <p class="popup-form-message">تم التسجيل بنجاح</p>
       <small>جاري تحويلك لاستكمال الحجز...</small>
     </div>
     <!-- background -->
@@ -333,7 +353,7 @@
         const phone = document.querySelector("#phone").value;
         const attendance = document.querySelector("#attendance").value;
         try {
-          TODO: uncomment;
+          // TODO: uncomment;
 
           const result = await fetchWithCheck(
             "https://kh.abadnet.com.sa/api/Camps",
@@ -352,21 +372,26 @@
           );
           console.log(result);
 
-          //DEVELOPMENT only
+          // DEVELOPMENT only
           // TODO: remove this
-          // const devResult =await new Promise((res, rej) => {
+          // const devResult = await new Promise((res, rej) => {
           //   setTimeout(() => {
           //     res("https://www.google.com/");
           //   }, 2000);
           // });
-
+          resultPopup.classList.remove("failure")
           resultPopup.style.display = "flex";
+
           const redirectTimeOut = setTimeout(() => {
-            // TODO: update devResult to result
-            window.location = devResult;
+            window.location = result.redirectUrl;
             return clearTimeout(redirectTimeOut);
           }, 3000);
         } catch (err) {
+          const popUpMessageContainer = document.querySelector(".popup-form-result p");
+
+          resultPopup.classList.add("failure")
+          resultPopup.style.display = "flex";
+          popUpMessageContainer.textContent = "حدث خطأ في التسجيل"; 
           console.log(err);
         }
       });
