--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <!--  -->
           <img
             class="section-img-number"
-            src="/assets/numbers/one@2x.png"
+            src="./assets/numbers/one@2x.png"
             alt=""
           />
         </section>
@@ -91,7 +91,7 @@
           </div>
           <img
             class="section-img-number"
-            src="/assets/numbers/two@2x.png"
+            src="./assets/numbers/two@2x.png"
             alt=""
           />
         </section>
@@ -111,7 +111,7 @@
           </div>
           <img
             class="section-img-number"
-            src="/assets/numbers/three@2x.png"
+            src="./assets/numbers/three@2x.png"
             alt=""
           />
         </section>
@@ -134,7 +134,7 @@
           </div>
           <img
             class="section-img-number"
-            src="/assets/numbers/four@2x.png"
+            src="./assets/numbers/four@2x.png"
             alt=""
           />
         </section>
@@ -153,7 +153,7 @@
           </div>
           <img
             class="section-img-number"
-            src="/assets/numbers/five@2x.png"
+            src="./assets/numbers/five@2x.png"
             alt=""
           />
         </section>
