--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 education: education,
                 phoneNumber: phone,
                 typeCourse: attendance,
-                createdCode: new Date().toISOString(), // TODO: fix this
+                createdCode: new Date().toISOString(),
               }),
             }
           );
