--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       </div>
     </header>
     <main class="container">
-      <div class="title first">
+      <a class="title first" href="#firstSec">
         <h3>ماذا ستتعلم في المعسكر</h3>
-      </div>
+      </a>
       <!-- learn sections -->
       <div class="sections">
-        <section>
+        <section id="firstSec">
           <h4><bdi>دورة +CompTIA Network</bdi></h4>
           <ul>
             <li>
@@ -193,6 +193,45 @@
               <p><bdi>إلـــــى 10:00pm </bdi></p>
             </div>
           </div>
+          <!-- شهادات حضورية معتمدة -->
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="42"
+              height="42"
+              fill="#9A20AA"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M11.25 9.541l-2.25-2.182.929-.929 1.321 1.253 2.821-2.892.929.93-3.75 3.82zm7.676-3.819c-.482 1.41-.484 1.139 0 2.555.05.147.074.297.074.445 0 .449-.222.883-.615 1.156-1.256.87-1.09.651-1.562 2.067-.198.591-.77.99-1.415.99h-.003c-1.549-.005-1.28-.088-2.528.789-.262.184-.569.276-.877.276s-.615-.092-.876-.275c-1.249-.878-.98-.794-2.528-.789h-.004c-.645 0-1.216-.399-1.413-.99-.473-1.417-.311-1.198-1.562-2.067-.395-.274-.617-.708-.617-1.157 0-.148.024-.298.074-.444.483-1.411.484-1.139 0-2.555-.05-.147-.074-.297-.074-.445 0-.45.222-.883.616-1.157 1.251-.868 1.089-.648 1.562-2.067.197-.591.769-.99 1.413-.99h.004c1.545.005 1.271.095 2.528-.79.262-.183.569-.274.877-.274s.615.091.876.274c1.248.878.98.795 2.528.79h.003c.646 0 1.217.399 1.415.99.473 1.416.307 1.197 1.562 2.067.394.273.616.707.616 1.156 0 .148-.024.299-.074.445zm-2.176 1.278c0-2.623-2.127-4.75-4.75-4.75s-4.75 2.127-4.75 4.75 2.127 4.75 4.75 4.75 4.75-2.128 4.75-4.75zm-7.385 7.931c-.766 0-1.371-.074-1.873-.213-.308 3.068-1.359 5.37-3.492 7.592.854.107 1.95-.094 2.833-.56.317.636.65 1.43.767 2.25 2.009-2.299 3.266-5.054 3.734-8.071-.943-.181-1.234-.496-1.969-.998zm5.27 0c-.737.507-1.043.82-1.968.998.47 3.017 1.726 5.772 3.733 8.071.116-.82.449-1.614.767-2.25.883.465 1.979.667 2.833.56-2.13-2.219-3.168-4.531-3.479-7.595-.503.141-1.112.216-1.886.216z"
+              />
+            </svg>
+            <div>
+              <p><bdi>شهادات حضورية معتمدة</bdi></p>
+            </div>
+          </div>
+          <!-- المعسكر لايتضمن اختبارات دولية -->
+
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              fill="#9A20AA"
+              width="42px"
+              version="1.1"
+              viewBox="0 0 489 489"
+              enable-background="new 0 0 489 489"
+            >
+              <g>
+                <path
+                  d="m244.5,0c-135.2,0-244.5,109.3-244.5,244.5s109.3,244.5 244.5,244.5 244.5-109.3 244.5-244.5-109.3-244.5-244.5-244.5zm-73.8,33.3c-12.9,18.1-23.9,37.2-33.1,57.2h-55.5c24.2-25.6 54.5-45.4 88.6-57.2zm-106.1,78h64.2c-15.1,38.9-23.4,80.4-24.6,122.8h-83.1c2.1-45.9 17.9-88.2 43.5-122.8zm0,266.4c-25.6-34.6-41.4-76.9-43.5-122.8h83.1c1.2,42.4 9.8,83.9 25,122.8h-64.6zm17.5,20.8h56c9.3,20 20.3,39.3 33,57.4-34.2-11.8-64.7-31.7-89-57.4zm152,69.5c-10.4-0.5-20.7-1.7-30.7-3.5-16.6-20.5-30.8-42.6-42.3-65.9h73v69.4zm-0-90.3h-82.5c-16.1-38.8-25.3-80.3-26.6-122.8h109.1v122.8zm0-143.6h-109.1c1.3-42.4 10.4-84 26.4-122.8h82.7v122.8zm.1-143.6h-0.1-73.2c11.6-23.5 25.8-45.6 42.5-65.9 10-1.9 20.3-3 30.8-3.5v69.4zm190.2,20.8c25.6,34.6 41.5,76.8 43.5,122.8h-83.1c-1.2-42.4-9.8-83.9-25-122.8h64.6zm-17.5-20.8h-56c-9.3-20-20.3-39.3-33.1-57.4 34.3,11.8 64.8,31.7 89.1,57.4zm-152-69.4c10.4,0.5 20.7,1.7 30.7,3.5 16.6,20.5 30.8,42.6 42.3,65.9h-73v-69.4zm-0,90.2h82.5c16.1,38.7 25.3,80.3 26.6,122.8h-109.1v-122.8zm0,143.6h109.1c-1.3,42.4-10.4,84-26.4,122.8h-82.7l-0-122.8zm-.1,213v-69.4h0.1 73.2c-11.6,23.5-25.8,45.6-42.5,65.9-10,1.9-20.3,3-30.8,3.5zm63-12c12.7-18.1 23.7-37.4 32.9-57.4h56.3c-24.4,25.7-54.9,45.6-89.2,57.4zm41.7-78.2c15-38.9 23.5-80.4 25.2-122.8h83.3c-2.1,45.9-17.9,88.2-43.5,122.8h-65z"
+                />
+              </g>
+            </svg>
+            <div>
+              <p><bdi>المعسكر لايتضمن اختبارات دولية</bdi></p>
+            </div>
+          </div>
           <div>
             <img src="assets/reserve@2x.png" alt="" />
             <div>
@@ -210,27 +249,70 @@
             <p>(يتم استكمال باقي مبلغ المعسكر بعد حضور أول محاضرة)</p>
           </div>
         </div>
-        <div>
-          <h4>سعر المعسكر</h4>
-          <ul>
-            <li>
-              <img src="assets/discount@2x.png" alt="" />
-              <span>
-                <bdi>7935 <span>ريال</span></bdi>
-              </span>
-            </li>
-            <li>
-              <span>
-                <bdi>4700 <span>ريال</span></bdi>
-              </span>
-            </li>
-          </ul>
+        <div
+          style="
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            justify-content: center;
+            align-items: center;
+          "
+        >
+          <div>
+            <h4>سعر المعسكر</h4>
+            <ul>
+              <li>
+                <img src="assets/discount@2x.png" alt="" />
+                <span>
+                  <bdi>7935 <span>ريال</span></bdi>
+                </span>
+              </li>
+              <li>
+                <span>
+                  <bdi>4700 <span>ريال</span></bdi>
+                </span>
+              </li>
+            </ul>
+          </div>
+          <div
+            style="
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              gap: 5px;
+            "
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              version="1.1"
+              height="32px"
+              fill="#c51e1e"
+              viewBox="0 0 100 125"
+              enable-background="new 0 0 100 100"
+              xml:space="preserve"
+            >
+              <path
+                d="M75.348,89.237h-0.874v-3.562c0-9.451-3.681-18.336-10.364-25.021l-7.51-7.51c-1.735-1.734-1.735-4.557,0-6.291l7.51-7.51  c6.684-6.684,10.364-15.57,10.364-25.021v-3.561h0.874c1.591,0,2.883-1.29,2.883-2.881S76.938,5,75.348,5H24.652  c-1.591,0-2.882,1.29-2.882,2.881s1.292,2.881,2.882,2.881h0.874v3.561c0,9.451,3.68,18.337,10.365,25.021l7.51,7.51  c1.735,1.734,1.735,4.556,0,6.291l-7.51,7.51c-6.685,6.685-10.365,15.569-10.365,25.021v3.562h-0.874  c-1.591,0-2.882,1.29-2.882,2.881c0,1.592,1.292,2.882,2.882,2.882h50.695c1.591,0,2.883-1.29,2.883-2.882  C78.23,90.527,76.938,89.237,75.348,89.237z M71.974,89.237H28.026v-3.562c0-8.782,3.42-17.042,9.632-23.253l7.51-7.51  c2.708-2.71,2.708-7.117,0-9.826l-7.51-7.51c-6.212-6.212-9.632-14.471-9.632-23.253v-3.561h43.947v3.561  c0,8.783-3.42,17.042-9.632,23.253l-7.51,7.51c-2.709,2.708-2.709,7.116,0,9.826l7.51,7.51c6.212,6.211,9.632,14.471,9.632,23.253  V89.237z M56.35,79.112c-1.125-1.426-2.062-2.874-3.375-4.124c-0.312-0.301-0.375-0.201-0.787-0.126  c-0.337,0.063-0.613-0.187-0.637-0.537V50c0-2.1,0.799-4.2,2.399-5.8l7.513-7.512c2.438-2.438,4.425-5.2,5.925-8.2H32.612  c1.5,3,3.487,5.763,5.925,8.2L46.05,44.2c1.601,1.601,2.4,3.7,2.4,5.8v25.562c0,0.762-0.325,0.9-0.487,1  c-0.751,0.487-1.513,0.987-1.987,1.749c-0.25,0.413-0.413,0.877-0.651,1.302c-0.475,0.812-1.287,1.424-2.212,1.637  c-0.688,0.162-1.426,0.112-2.125,0.25c-1.163,0.237-2.149,1-3.062,1.763c-1.787,1.487-3.5,3.062-5.1,4.725h35.15  c-0.124-0.287-0.262-0.574-0.412-0.862c-0.125-0.238-0.263-0.488-0.463-0.675c-0.249-0.212-0.575-0.312-0.888-0.413  C62.338,84.774,58.85,82.338,56.35,79.112z"
+              />
+            </svg>
+            <div>
+              <p style="white-space: nowrap">
+                <bdi>المقاعد محدودة<span style="color: #c51e1e">!</span></bdi>
+              </p>
+            </div>
+          </div>
         </div>
       </section>
       <!--  -->
-      <div class="title">
+      <a
+        class="title download"
+        target="_blank"
+        href="https://www.abadnet.com.sa/bootcamp/topic/CyberSecBootcampTopics.pdf"
+        download
+      >
         <h3>تحميل محاور المعسكر</h3>
-      </div>
+      </a>
       <!-- registeration -->
       <form action="">
         <!-- name -->
