images for small screens

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="right">
         <img class="logo-img" src="./assets/logo.png" alt="" />
         <div class="title">
+          <img class="lock-img" src="./assets/lock-image.png" alt="" />
           <h1>معسكر المسار التأسيسي للأمن السيبراني</h1>
           <h2><bdi>CyberSecurity Bootcamp Level 1</bdi></h2>
         </div>
